# mpc_neural_surrogate

./: .gitignore  .pre-commit-config.yaml  ANALYSIS_UPDATES.md  Makefile  README.md  SLIDING_WINDOW_FIX.md  TODO.md  VISUALIZATIONS_GUIDE.md  pyproject.toml  tt.py
data/: mpc_3dof_dataset.h5  mpc_3dof_dataset_jacobian.h5  robot_mpc_dataset.h5
docs/: index.html  main.typ
models/: 3dof_arm.xml  3dof_robot_arm.xml
models/trained/: mlp_20251125_045459.pkl
report/: BASELINE.MD  main.bib  main.typ
results/: Gradient_Boosting_20251120_175716.json  Gradient_Boosting_20251122_173653.json  Gradient_Boosting_20251122_180150.json  KNN_Regressor_20251120_175717.json  KNN_Regressor_20251122_173655.json  KNN_Regressor_20251122_180152.json  KNN_Regressor_20251125_233203.json  Linear_Regression_20251120_173237.json  Linear_Regression_20251120_173316.json  Linear_Regression_20251120_174610.json  Linear_Regression_20251122_172434.json  Linear_Regression_20251122_175020.json  Linear_Regression_20251122_175059.json  MLP_Regressor_20251120_175222.json  MLP_Regressor_20251122_173103.json  MLP_Regressor_20251122_175545.json  MLP_Regressor_20251126_000014.json  Random_Forest_20251120_174633.json  Random_Forest_20251122_172458.json  Random_Forest_20251122_175140.json
results/closed_loop/: closed_loop_GRU_Deep_best_mse_1_20251205_002125.json  closed_loop_GRU_Deep_best_mse_1_20251208_054914.json  closed_loop_GRU_Deep_best_mse_1_20251209_013051.json  closed_loop_GRU_Deep_best_mse_1_20251210_131132.json  closed_loop_GRU_Deep_best_mse_1_20251212_152052.json  closed_loop_GRU_Deep_best_mse_1_20251213_224635.json  closed_loop_GRU_Deep_best_mse_2_20251205_002414.json  closed_loop_GRU_Deep_best_mse_2_20251208_055221.json  closed_loop_GRU_Deep_best_mse_2_20251209_013218.json  closed_loop_GRU_Deep_best_mse_2_20251210_131259.json  closed_loop_GRU_Deep_best_mse_2_20251212_152159.json  closed_loop_GRU_Deep_best_mse_2_20251213_224757.json  closed_loop_GRU_Deep_best_mse_3_20251205_002702.json  closed_loop_GRU_Deep_best_mse_3_20251208_055512.json  closed_loop_GRU_Deep_best_mse_3_20251209_013350.json  closed_loop_GRU_Deep_best_mse_3_20251210_131426.json  closed_loop_GRU_Deep_best_mse_3_20251212_152305.json  closed_loop_GRU_Deep_best_mse_3_20251213_224917.json  closed_loop_GRU_Deep_best_mse_4_20251205_002949.json  closed_loop_GRU_Deep_best_mse_4_20251208_055757.json  closed_loop_GRU_Deep_best_mse_4_20251209_013520.json  closed_loop_GRU_Deep_best_mse_4_20251210_131553.json  (+532 more)
scripts/: CLOSED_LOOP_README.md  analyze_closed_loop.py  analyze_closed_loop_indiv.py  analyze_closed_loop_mean.py  closed_loop_eval.py  compare_closed_loop_results.py  data_generator.py  dataset_scale.py  export_model_for_eval.py  interactive_mujoco_launcher.py  mpc_surrogate_training copy.ipynb  mpc_surrogate_training.ipynb  mpc_surrogate_training.py  replay_dataset_mujoco.py  scikit_learn_baseline.py  visualize_scikit_results.py
src/mpc_surrogate/: model.py  (+8 more)
tests/: ik_test.py  mpc_mujoco_sim.py  mpc_test_mujoco.py  replay_dataset_mujoco.py  test_mpc_control.py
(+596 files in other folders)
