[project]
name = "mpc-surrogate"
version = "0.1.0"
description = "Approximating Model Predictive Control policies using neural networks"
readme = "README.md"
authors = [
    { name = "Theo", email = "130441797+theguega@users.noreply.github.com" }
]
requires-python = ">=3.12"

dependencies = [
    "h5py>=3.14.0",
    "matplotlib>=3.10.6",
    "mujoco>=3.3.6",
    "numpy>=2.3.3",
    "pre-commit>=4.3.0",
    "scipy>=1.16.2",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "ruff",
    "based",
    "basedpyright"
]

[tool.basedpyright]
typeCheckingMode = "basic"
ignore = ["**/__init__.py"]
venvPath = ".venv"
reportAttributeAccessIssue = false
reportIndexIssue = false
reportCallIssue = false

[tool.ruff]
line-length = 100
extend-select = ["E", "F", "I"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["uv-build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
