[project]
name = "mpc-surrogate"
version = "0.1.0"
description = "Approximating Model Predictive Control policies using neural networks"
readme = "README.md"
authors = [
    { name = "Theo", email = "130441797+theguega@users.noreply.github.com" }
]
requires-python = ">=3.12"

dependencies = [
    "h5py>=3.14.0",
    "matplotlib>=3.10.6",
    "mujoco>=3.3.6",
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "tqdm>=4.66.0",
    "scikit-learn>=1.7.2",
    "casadi>=3.7.2",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.6",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
